force-app/main/default/objects/Application_Setting__mdt/Application_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata object to hold keys, values and settings.</description>
    <label>Application Setting</label>
    <pluralLabel>Application Settings</pluralLabel>
</CustomObject>