force-app/main/default/objects/Application_Setting__mdt/fields/Datetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Value__c</fullName>
    <label>Datetime Value</label>
    <type>DateTime</type>
</CustomField>