force-app/main/default/objects/Application_Setting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description about this setting and its usage</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>