force-app/main/default/objects/Application_Setting__mdt/fields/Integer_Value__c.field-meta.xml
<CustomField>
    <fullName>Integer_Value__c</fullName>
    <description>Whole number value for this setting.</description>
    <label>Integer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>