force-app/main/default/objects/Application_Setting__mdt/fields/String_Value__c.field-meta.xml
<CustomField>
    <fullName>String_Value__c</fullName>
    <description>Text-based value</description>
    <label>String Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>